--- a/view/user/forgotpass.ejs
+++ b/view/user/forgotpass.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header.ejs') %>
 
 <!-- breadcrumb start-->
-<section class="breadcrumb breadcrumb_bg">
+<!-- <section class="breadcrumb breadcrumb_bg">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-8">
@@ -14,69 +14,20 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 <!-- breadcrumb start-->
 
 <!--================login_part Area =================-->
 <section class="login_part padding_top">
   <div class="container h-100">
     <div class="row align-items-center justify-content-center h-100">
-      <div class="col-12">
+      <div class="col-12 col-md-6">
         <div class="login_part_form m-auto">
           <div class="login_part_form_iner ml-5">
             <h3>
-              Join Zain Family ! <br />
-              Please Sign Up now
+              Forgot Password
             </h3>
-            <form class="row contact_form" action="#" method="post" novalidate="novalidate">
-              <div class="col-md-6 form-group p_star">
-                <input
-                  type="text"
-                  class="form-control"
-                  id="fname"
-                  name="fname"
-                  value=""
-                  placeholder="First Name"
-                  required
-                />
-              </div>
-              <div class="col-md-6 form-group p_star">
-                <input
-                  type="text"
-                  class="form-control"
-                  id="lname"
-                  name="lname"
-                  value=""
-                  placeholder="Last Name"
-                  required
-                />
-              </div>
-              <div class="col-md-12 form-group p_star">
-                <input
-                  type="text"
-                  class="form-control"
-                  id="mob"
-                  name="mob"
-                  value=""
-                  pattern="\d*"
-                  maxlength="10"
-                  placeholder="Phone number"
-                  required
-                />
-              </div>
-              <div class="col-md-12 form-group p_star">
-                <input
-                  type="text"
-                  class="form-control"
-                  id="pincode"
-                  name="pincode"
-                  value=""
-                  pattern="\d*"
-                  maxlength="6"
-                  placeholder="Pincode"
-                  required
-                />
-              </div>
+            <form class="row contact_form">
               <div class="col-md-12 form-group p_star">
                 <input
                   type="email"
@@ -84,7 +35,7 @@
                   id="email"
                   name="email"
                   value=""
-                  placeholder="Email Address"
+                  placeholder="Your Registered Email"
                   required
                 />
               </div>
@@ -96,11 +47,20 @@
                   name="password"
                   value=""
                   placeholder="Password"
-                  required
+                />
+              </div>
+              <div class="col-md-12 form-group p_star">
+                <input
+                  type="password"
+                  class="form-control"
+                  id="password2"
+                  name="password2"
+                  value=""
+                  placeholder="Confirm Password"
                 />
               </div>
               <div class="col-md-12 form-group">
-                <button type="submit" value="submit" class="btn_3">Create Profile</button>
+                <button type="button" id="forgot_pass" class="btn_3">Create Profile</button>
               </div>
             </form>
           </div>
@@ -110,5 +70,59 @@
   </div>
 </section>
 <!--================login_part end =================-->
+
+<script>
+
+
+$('#forgot_pass').click((e)=>{
+  e.preventDefault();
+  forgotPasswordValidation()
+})
+
+  function forgotPasswordValidation() {  
+  var pw1 = document.getElementById("password").value;  
+  var pw2 = document.getElementById("password2").value; 
+  var email = document.getElementById("email").value;  
+
+  if(email == "") {  
+    //  document.getElementById("email").innerHTML = "**Fill the password please!";  
+     $("<p style='color:red'>Email is required</p>").insertAfter("#email");
+     return false;  
+  }  
+  if(pw1 == "") {  
+    //  document.getElementById("email").innerHTML = "**Fill the password please!";  
+     $("<p style='color:red'>please enter the password to be changed</p>").insertAfter("#password");
+     return false;  
+  }  
+  if(pw2 == "") {  
+    //  document.getElementById("email").innerHTML = "**Fill the password please!";  
+     $("<p style='color:red'>please confirm your password</p>").insertAfter("#password2");
+     return false;  
+  }  
+   
+  if(pw1 != pw2)  
+  {   
+    customAlert("Passwords did not match","error");  
+    return false;
+  }
+emailCheck(email,pw1);
+}
+function emailCheck(email,password) {
+ $.ajax({
+  method: "post",
+  url: "/forgot-password",
+  data: {
+    email,
+    password,
+  },
+}).then((response)=>{
+if(response.stat==='success'){
+  location.href='/signin';
+}else{
+  customAlert(response.msg,response.stat); 
+}
+});
+}
+</script>
 
 <%- include('partials/footer.ejs') %>
