banner null update

--- a/view/user/home.ejs
+++ b/view/user/home.ejs
@@ -1,5 +1,7 @@
 <%- include('partials/header.ejs') %>
 
+<% if (banner.length>0) { %>
+ 
 <!-- banner part start-->
 <section class="banner_part">
   <div class="container">
@@ -34,6 +36,7 @@
 </section>
 <!-- banner part start-->
 
+<% } %>
 <!-- feature_part start-->
 <section class="feature_part padding_top">
   <div class="container">
