--- a/view/admin/dashboard.ejs
+++ b/view/admin/dashboard.ejs
@@ -34,7 +34,10 @@
         </div>
         <div>
           <p class="mb-2 text-sm font-medium text-gray-600 dark:text-gray-400">Sales This Month</p>
-          <p class="text-lg font-semibold text-gray-700 dark:text-gray-200">₹ <%= totalSales.totalSales %></p>
+          <% if (totalSales) { %>
+            <p class="text-lg font-semibold text-gray-700 dark:text-gray-200">₹ <%= totalSales.totalSales %></p>
+            <% } %>
+           
         </div>
       </div>
       <!-- Card -->
