total sales null conditiion

--- a/view/admin/dashboard.ejs
+++ b/view/admin/dashboard.ejs
@@ -49,10 +49,12 @@
             ></path>
           </svg>
         </div>
+        <% if (totalSales) { %>
         <div>
           <p class="mb-2 text-sm font-medium text-gray-600 dark:text-gray-400">New Orders</p>
           <p class="text-lg font-semibold text-gray-700 dark:text-gray-200"><%= totalSales.count %></p>
         </div>
+        <% } %>
       </div>
       <!-- Card -->
       <div class="flex items-center p-4 bg-white rounded-lg shadow-xs dark:bg-gray-800">
