admin dashboard mobile toggle list update

--- a/view/user/partials/header.ejs
+++ b/view/user/partials/header.ejs
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <title>aranoz</title>
+    <title>Hourglass</title>
     <link rel="icon" href="/user/img/favicon.png" />
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="/user/css/bootstrap.min.css" />
