--- a/view/admin/login.ejs
+++ b/view/admin/login.ejs
@@ -52,7 +52,7 @@
                   <input
                     class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input"
                     name="password"
-                    value="pinkitom"
+                    value=""
                     required
                     type="password"
                   />
