feature page linked to shop

--- a/view/user/home.ejs
+++ b/view/user/home.ejs
@@ -52,8 +52,8 @@
         <div class="single_feature_post_text">
           <p>Premium Quality</p>
           <h3>Latest foam Sofa</h3>
-          <a href="#" class="feature_btn">EXPLORE NOW <i class="fas fa-play"></i></a>
-          <a href="/product-details">
+          <a href="/shop" class="feature_btn">EXPLORE NOW <i class="fas fa-play"></i></a>
+          <a href="/shop">
             <img src="/user/img/feature/feature_1.png" alt="" />
           </a>
         </div>
@@ -62,8 +62,8 @@
         <div class="single_feature_post_text">
           <p>Premium Quality</p>
           <h3>Latest foam Sofa</h3>
-          <a href="#" class="feature_btn">EXPLORE NOW <i class="fas fa-play"></i></a>
-          <a href="/product-details">
+          <a href="/shop" class="feature_btn">EXPLORE NOW <i class="fas fa-play"></i></a>
+          <a href="/shop">
             <img src="/user/img/feature/feature_2.png" alt="" />
           </a>
         </div>
@@ -72,8 +72,8 @@
         <div class="single_feature_post_text">
           <p>Premium Quality</p>
           <h3>Latest foam Sofa</h3>
-          <a href="#" class="feature_btn">EXPLORE NOW <i class="fas fa-play"></i></a>
-          <a href="/product-details">
+          <a href="/shop" class="feature_btn">EXPLORE NOW <i class="fas fa-play"></i></a>
+          <a href="/shop">
             <img src="/user/img/feature/feature_3.png" alt="" />
           </a>
         </div>
@@ -82,8 +82,8 @@
         <div class="single_feature_post_text">
           <p>Premium Quality</p>
           <h3>Latest foam Sofa</h3>
-          <a href="#" class="feature_btn">EXPLORE NOW <i class="fas fa-play"></i></a>
-          <a href="/product-details">
+          <a href="/shop" class="feature_btn">EXPLORE NOW <i class="fas fa-play"></i></a>
+          <a href="/shop">
             <img src="/user/img/feature/feature_4.png" alt="" />
           </a>
         </div>
