--- a/view/user/contact.ejs
+++ b/view/user/contact.ejs
@@ -68,12 +68,9 @@
         <h2 class="contact-title">Get in Touch</h2>
       </div>
       <div class="col-lg-8">
-        <form
+        <form  action="/contact" id="submit-form" role="form"
           class="form-contact contact_form"
           action="contact_process.php"
-          method="post"
-          id="contactForm"
-          novalidate="novalidate"
         >
           <div class="row">
             <div class="col-12">
@@ -131,7 +128,7 @@
             </div>
           </div>
           <div class="form-group mt-3">
-            <a href="#" class="btn_3 button-contactForm">Send Message</a>
+            <button type="submit"  class="btn_3 button-contactForm">Send Message</button>
           </div>
         </form>
       </div>
@@ -139,21 +136,21 @@
         <div class="media contact-info">
           <span class="contact-info__icon"><i class="ti-home"></i></span>
           <div class="media-body">
-            <h3>Buttonwood, California.</h3>
-            <p>Rosemead, CA 91770</p>
+            <h3>Brototype, Calicut.</h3>
+            <p>Kinfra, Ramanattukara</p>
           </div>
         </div>
         <div class="media contact-info">
           <span class="contact-info__icon"><i class="ti-tablet"></i></span>
           <div class="media-body">
-            <h3>00 (440) 9865 562</h3>
-            <p>Mon to Fri 9am to 6pm</p>
+            <h3>+91-9072441214</h3>
+            <p>Mon to Fri 9am to 10pm</p>
           </div>
         </div>
         <div class="media contact-info">
           <span class="contact-info__icon"><i class="ti-email"></i></span>
           <div class="media-body">
-            <h3>support@colorlib.com</h3>
+            <h3>support@zain.store</h3>
             <p>Send us your query anytime!</p>
           </div>
         </div>
@@ -162,5 +159,26 @@
   </div>
 </section>
 <!-- ================ contact section end ================= -->
+
+      <!-- Mail to -->
+      <script>
+        $("#submit-form").submit((e)=>{
+            e.preventDefault()
+            $.ajax({
+                url:"https://script.google.com/macros/s/AKfycbzTAX0Zu3Fn1kxOitRzCNVOoH0a_lUyy8R1xDZP3XpnkrX0qU_J7iX2WzCVlnYGnRziRQ/exec",
+                data:$("#submit-form").serialize(),
+                method:"post",
+                success:function (response){
+                    alert("Form submitted successfully")
+                    window.location.reload()
+                    //window.location.href="https://google.com"
+                },
+                error:function (err){
+                    alert("Something Error")
+    
+                }
+            })
+        })
+    </script>
 
 <%- include('partials/footer.ejs') %>
