--- a/view/user/home.ejs
+++ b/view/user/home.ejs
@@ -1,7 +1,5 @@
-<%- include('partials/header.ejs') %>
+<%- include('partials/header.ejs') %> <% if (banner.length>0) { %>
 
-<% if (banner.length>0) { %>
- 
 <!-- banner part start-->
 <section class="banner_part">
   <div class="container">
@@ -285,14 +283,14 @@
       <div class="col-lg-6 col-md-6">
         <div class="offer_text">
           <h2>Weekly Sale on 60% Off All Products</h2>
-          <div class="date_countdown">
+          <!-- <div class="date_countdown">
             <div id="timer">
               <div id="days" class="date"></div>
               <div id="hours" class="date"></div>
               <div id="minutes" class="date"></div>
               <div id="seconds" class="date"></div>
             </div>
-          </div>
+          </div> -->
           <div class="input-group">
             <input
               type="text"
@@ -325,56 +323,20 @@
     <div class="row align-items-center justify-content-between">
       <div class="col-lg-12">
         <div class="best_product_slider owl-carousel">
+          <% product.forEach((element,index) => { %> 
+            <% if (index<8) { %>
           <div class="single_product_item">
-            <a href="/product-details">
-              <img src="/user/img/product/product_1.png" alt="" />
+            <a href="/product-details/<%= element._id %> ">
+              <img src="/product_img/<%= element.thumbnail %> " alt="" />
             </a>
 
             <div class="single_product_text">
-              <h4>Quartz Belt Watch</h4>
-              <h3>$150.00</h3>
+              <h4><%= element.title %> </h4>
+              <h3>$<%= element.price %></h3>
             </div>
           </div>
-          <div class="single_product_item">
-            <a href="/product-details">
-              <img src="/user/img/product/product_2.png" alt="" />
-            </a>
-
-            <div class="single_product_text">
-              <h4>Quartz Belt Watch</h4>
-              <h3>$150.00</h3>
-            </div>
-          </div>
-          <div class="single_product_item">
-            <a href="/product-details">
-              <img src="/user/img/product/product_3.png" alt="" />
-            </a>
-
-            <div class="single_product_text">
-              <h4>Quartz Belt Watch</h4>
-              <h3>$150.00</h3>
-            </div>
-          </div>
-          <div class="single_product_item">
-            <a href="/product-details">
-              <img src="/user/img/product/product_4.png" alt="" />
-            </a>
-
-            <div class="single_product_text">
-              <h4>Quartz Belt Watch</h4>
-              <h3>$150.00</h3>
-            </div>
-          </div>
-          <div class="single_product_item">
-            <a href="/product-details">
-              <img src="/user/img/product/product_5.png" alt="" />
-            </a>
-
-            <div class="single_product_text">
-              <h4>Quartz Belt Watch</h4>
-              <h3>$150.00</h3>
-            </div>
-          </div>
+          <% } %>
+           <% }) %>
         </div>
       </div>
     </div>
@@ -449,8 +411,7 @@
   </div>
 </section>
 <!--::subscribe_area part end::-->
-<%- include('partials/footer.ejs') %> 
-<% if (msg.length>0) { %>
+<%- include('partials/footer.ejs') %> <% if (msg.length>0) { %>
 <script defer>
   customAlert('<%= msg %>', 'success');
 </script>
