shop best sellers added

--- a/view/user/shop.ejs
+++ b/view/user/shop.ejs
@@ -197,41 +197,20 @@
     <div class="row align-items-center justify-content-between">
       <div class="col-lg-12">
         <div class="best_product_slider owl-carousel">
+          <% product.forEach((element,index) => { %> 
+            <% if (index<8) { %>
           <div class="single_product_item">
-            <img src="/user/img/product/product_1.png" alt="" />
+            <a href="/product-details/<%= element._id %> ">
+              <img src="/product_img/<%= element.thumbnail %> " alt="" />
+            </a>
+
             <div class="single_product_text">
-              <h4>Quartz Belt Watch</h4>
-              <h3>$150.00</h3>
+              <h4><%= element.title %> </h4>
+              <h3>$<%= element.price %></h3>
             </div>
           </div>
-          <div class="single_product_item">
-            <img src="/user/img/product/product_2.png" alt="" />
-            <div class="single_product_text">
-              <h4>Quartz Belt Watch</h4>
-              <h3>$150.00</h3>
-            </div>
-          </div>
-          <div class="single_product_item">
-            <img src="/user/img/product/product_3.png" alt="" />
-            <div class="single_product_text">
-              <h4>Quartz Belt Watch</h4>
-              <h3>$150.00</h3>
-            </div>
-          </div>
-          <div class="single_product_item">
-            <img src="/user/img/product/product_4.png" alt="" />
-            <div class="single_product_text">
-              <h4>Quartz Belt Watch</h4>
-              <h3>$150.00</h3>
-            </div>
-          </div>
-          <div class="single_product_item">
-            <img src="/user/img/product/product_5.png" alt="" />
-            <div class="single_product_text">
-              <h4>Quartz Belt Watch</h4>
-              <h3>$150.00</h3>
-            </div>
-          </div>
+          <% } %>
+           <% }) %>
         </div>
       </div>
     </div>
