--- a/view/user/partials/footer.ejs
+++ b/view/user/partials/footer.ejs
@@ -14,7 +14,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-sm-6 col-lg-2">
+            <!-- <div class="col-sm-6 col-lg-2">
                 <div class="single_footer_part">
                     <h4>Quick Links</h4>
                     <ul class="list-unstyled">
@@ -46,7 +46,7 @@
                         <li><a href="">Agencies</a></li>
                     </ul>
                 </div>
-            </div>
+            </div> -->
             <div class="col-sm-6 col-lg-4">
                 <div class="single_footer_part">
                     <h4>Newsletter</h4>
